--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "lugx_gaming_clean_safe",
+  "name": "lugx_gaming-12-07--2025",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
